Change link button style

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <!-- Personal Info Bullets End -------->
                     <!-- Button to about page ------------->
                     <div class="about-btn-container">
-                        <div class="list-group">
-                            <a href="about.html" class="list-group-item list-group-item-secondary ">More about me
+                        <div class="btn">
+                            <a href="about.html" class="list-btn-item list-btn-item-secondary ">More about me
                             </a>
                         </div>
                     </div>
