Read through, tidy-up and correct home,portfolio,about and contact sheet to be valid

--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
     <title>Franciska Du Toit</title>
     <!-- Favicon to update -->
     <link rel="shortcut icon" type="image/jpg" href="#">
-    <!-- Bootstrap CDN ------>
+    <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <!-- Fontawesom Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- CSS style sheet --->
+    <!-- CSS style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -46,7 +46,7 @@
             </div>
         </nav>
     </div>
-    <!-- Nav Menu end ------------>
+    <!-- Nav Menu end -->
     <div class="container">
     <!-- Hero Image for Desktop -->
     <section class="hero-image " style="background-image: url(assets/images/franciska_du_toit_aboutpage_image.jpg);">
@@ -59,8 +59,8 @@
             </ul>
         </div>
     </section>
-    <!-- Hero Image for Desktop End-->
-    <!-- Content section-->
+    <!-- Hero Image for Desktop End -->
+    <!-- Content section -->
     <section class="personal-content">
         <section class="personal-section">
             <div class="container-fluid container-custom">
@@ -69,21 +69,21 @@
                     <!-- Hero Image for Mobile & Tablet -->
                         <div class="hero-image-mobile" style="background-image: url(assets/images/franciska_du_toit_aboutpage_image.jpg);">
                         </div>
-                    <!-- Hero Image for Mobile & Tablet end-->
+                    <!-- Hero Image for Mobile & Tablet end -->
                         <div class="col-12 about-info-container">
-                    <!-- Intro quote ------>
+                    <!-- Intro quote -->
                             <blockquote class="blockquote about-quote">
                                 <p class="quote-text">“My vision for us is to see the unlimited potential in the things we do and create. We might just change the world...”</p>
                             </blockquote>
-                    <!-- Intro quote end ----------->
-                    <!-- Projects ------------------>
+                    <!-- Intro quote end -->
+                    <!-- Projects -->
                             <div class="project-timeline-container">
                                 <h1 class="project-timeline-heading" >
                                 What I have been up to
                                 </h1>
-                            <!-- original code credit for list: https://austinknight.com/ and  https://getbootstrap.com/docs/4.0/components/list-group/ with customisation---------->
+                            <!-- original code credit for list: https://austinknight.com/ and  https://getbootstrap.com/docs/4.0/components/list-group/ with customisation -->
                                 <div class="timeline-line"></div>
-                            <!-- Project timeline ------->
+                            <!-- Project timeline -->
                                     <div class="project-timeline-tab">
                                         <div class="project-list list-group" id="list-tab" role="tablist">
                                             <a class="timeline-event inline-block tab-link list-group-item list-group-item-action active"
@@ -104,10 +104,10 @@
                                             </a>
                                         </div>
                                     </div>
-                        <!-- Project timeline --------->
+                        <!-- Project timeline -->
                         <!-- Project timeline detail -->
                                     <div class="project-content tab-content" id="nav-tabContent">
-                                        <!--Synergy Project-->
+                                        <!-- Synergy Project -->
                                         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
@@ -124,8 +124,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <!--Synergy Project End-->
-                                        <!--Fincede Project ----->
+                                        <!-- Synergy Project End -->
+                                        <!-- Fincede Project -->
                                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
@@ -142,8 +142,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <!--Fincede Project End ------->
-                                        <!--Conversations Project ----->
+                                        <!-- Fincede Project End -->
+                                        <!-- Conversations Project -->
                                         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
@@ -160,8 +160,8 @@
                                                 </div>
                                             </div>
                                         </div> 
-                                        <!--Conversations Project End -->
-                                        <!--Leasing Hub ---------------->
+                                        <!-- Conversations Project End -->
+                                        <!-- Leasing Hub -->
                                         <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
@@ -178,8 +178,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <!--Leasing Hub End -------------->
-                                        <!--Fly UX ----------------------->
+                                        <!-- Leasing Hub End -->
+                                        <!-- Fly UX -->
                                         <div class="tab-pane fade" id="list-contact" role="tabpanel" aria-labelledby="list-contact-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
@@ -196,10 +196,10 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <!--Fly UX End -------------------->    
+                                        <!-- Fly UX End -->    
                                     </div>
                         <!-- Project timeline detail end -->
-                        <!-- Go to projects button -------->
+                        <!-- Go to projects button -->
                                 <div class="btn-container">
                                     <div class="center-btn">
                                         <button type="button" id="about-btn" class="btn btn-sm">See All Projects
@@ -207,10 +207,10 @@
                                         </button>
                                     </div>
                                 </div>
-                        <!-- Go to projects button -------->
+                        <!-- Go to projects button -->
                             </div>
-                    <!-- Project end ------>
-                    <!-- Qualifications --->
+                    <!-- Project end -->
+                    <!-- Qualifications -->
                             <div class="qualification-container">
                                 <div>
                                     <h1 class="qual-heading" >
@@ -219,7 +219,7 @@
                                     <p class="qual-text">
                                     I enjoy to learn and exploring different fields!
                                     </p>
-                                <!-- Qualifications in-progress--->
+                                <!-- Qualifications in-progress -->
                                 <div class="progress-container">
                                     <h5 class="progress-heading">
                                     In progress
@@ -232,8 +232,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Qualifications in-progress end--->
-                                <!-- Qualifications completed--->
+                                <!-- Qualifications in-progress end -->
+                                <!-- Qualifications completed -->
                                 <div class="progress-container">
                                     <h5 class="progress-heading">
                                     Completed
@@ -267,10 +267,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Qualifications completed end --->
+                                <!-- Qualifications completed end -->
                             </div>
-                            <!-- Qualifications End--->
-                            <!-- CV pdf downlaod--->
+                            <!-- Qualifications End -->
+                            <!-- CV pdf downlaod -->
                             <div>
                                 <p class="cv-text">Download a full PDF version of my CV
                                     <a href="#" target="_blank" class="cv-pdf">
@@ -279,7 +279,7 @@
                                     </a>
                                 </p>
                             </div>
-                            <!-- CV pdf downlaod--->
+                            <!-- CV pdf downlaod -->
                         </div>
                         </div>
                     </div>
@@ -297,12 +297,12 @@
         </section>
         <!-- Social Footer for mobile and tablet end -->
     </section>
-    <!-- Content section end-->
+    <!-- Content section end -->
     </div>
-<!-- Scripts ----------------->   
+<!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Scripts End -------------->   
+<!-- Scripts End -->   
 </body>
 </html>
