--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Franciska Du Toit</title>
     <!-- Favicon to update -->
     <link rel="shortcut icon" type="image/jpg" href="#">
-    <!-- Bootstrap CDN ------>
+    <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <!-- Fontawesom Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- CSS style sheet --->
+    <!-- CSS style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -46,7 +46,7 @@
             </div>
         </nav>
     </div>
-    <!-- Nav Menu end ------------>
+    <!-- Nav Menu end -->
     <div class="container">
     <!-- Hero Image for Desktop -->
     <section class="hero-image "  style="background-image: url(assets/images/franciska-du-toit-homepage-image.jpg);">
@@ -72,8 +72,8 @@
                     <!-- Hero Image for Mobile & Tablet end-->
                     <!-- Intro text-->
                         <div class="personal-content-container">
-                            <h1 class="about-heading">Hi, I am Franciska Du Toit - 
-                            <br> UX Designer, Problem Solver and Software Developer in the making. </h1>
+                            <h2 class="about-heading">Hi, I am Franciska Du Toit - 
+                            <br> UX Designer, Problem Solver and Software Developer in the making. </h2>
                             <p>My goal is to inspire people to explore, learn and challenge the norm so that we change the world.</p>
                         </div>
                     <!-- Intro text end-->
@@ -86,8 +86,8 @@
             <div class="container-fluid container-custom">
                 <div class="row ">
                     <div class="col-12 col-md-6 bullet">
-                    <!-- Personal Info Bullets ------->
-                        <div class="bullet-icon"><i class="fas fa-map-marker-alt" alt="map-icon"></i></div>
+                    <!-- Personal Info Bullets -->
+                        <div class="bullet-icon"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="bullet-text">Based In Ireland</div>
                     </div>
                     <div class="col-12 col-md-6 bullet">
@@ -102,16 +102,16 @@
                         <div class="bullet-icon"><i class="fas fa-anchor"></i></div>
                         <div class="bullet-text">Learning to Sail</div>
                     </div>
-                    <!-- Personal Info Bullets End -------->
-                    <!-- Button to about page ------------->
+                    <!-- Personal Info Bullets End -->
+                    <!-- Button to about page -->
                     <div class="about-btn-container">
                         <div class="btn">
                             <a href="about.html" class="list-btn-item list-btn-item-secondary ">More about me
                             </a>
                         </div>
                     </div>
-                    <!-- Button to about page end -------->
-                    <!-- Quote for tablet and desktop ---->
+                    <!-- Button to about page end -->
+                    <!-- Quote for tablet and desktop -->
                     <div class="quote-container">
                         <blockquote class="blockquote">
                             <p class="quote-text">“I believe we don't have to settle. I believe we have to explore and take a leap of faith. It is never too late to find inspiration so that we can live a more fulfilled life.”
@@ -132,14 +132,14 @@
             </ul>
         </section>
         <!-- Social Footer for mobile and tablet end -->
-        <!-- Personal info end-->
+        <!-- Personal info end -->
     </section>
-    <!-- Content section end-->
+    <!-- Content section end -->
     </div>
-<!-- Scripts ----------------->   
+<!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Scripts End -------------->   
+<!-- Scripts End -->   
 </body>
 </html>
