--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,16 @@
     <title>Franciska Du Toit</title>
     <!-- Favicon to update -->
     <link rel="shortcut icon" type="image/jpg" href="#">
-    <!-- Bootstrap CDN ------>
+    <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <!-- Fontawesom Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- CSS style sheet --->
+    <!-- CSS style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Nav Menu Section Code from Bootstrap-->
+    <!-- Nav Menu Section Code from Bootstrap -->
     <div class="site-header"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
             <div class="container-fluid">
@@ -46,7 +46,7 @@
             </div>
         </nav>
     </div>
-    <!-- Nav Menu end ------------>
+    <!-- Nav Menu end -->
     <div class="container">
     <!-- Hero Image for Desktop -->
     <section class="hero-image "  style="background-image: url(assets/images/franciska_du_toit_contactpage.jpg);">
@@ -59,8 +59,8 @@
             </ul>
         </div>
     </section>
-    <!-- Hero Image for Desktop End-->
-    <!-- Content section-->
+    <!-- Hero Image for Desktop End -->
+    <!-- Content section -->
     <section class="personal-content">
         <section class="personal-section">
             <div class="container-fluid container-custom">
@@ -74,19 +74,19 @@
                 </div>
             </div>
         </section>
-        <!-- Content form-->
+        <!-- Content form -->
         <section class="personal-section">
             <div class="container-fluid container-custom">
                 <div class="row ">
                     <div class="col-12">
-                        <!-- Content form heading-->
+                        <!-- Content form heading -->
                         <div class="portfolio-text-container">
-                            <h1 class="portfolio-heading" >
+                            <h2 class="portfolio-heading" >
                             Get in touch 
-                            </h1>
+                            </h2>
                         </div>
-                        <!-- Content form heading-->
-                        <!--Form  ------------------>
+                        <!-- Content form heading -->
+                        <!-- Form -->
                         <div class="form-container">
                             <form>
                                 <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required="">
@@ -100,7 +100,7 @@
                                 </div>
                             </form>
                         </div>
-                        <!--Form End-------------->
+                        <!-- Form End -->
                     </div>
                 </div>
             </div>
@@ -115,14 +115,14 @@
             </ul>
         </section>
         <!-- Social Footer for mobile and tablet end -->
-        <!-- Personal info end-->
+        <!-- Personal info end -->
     </section>
-    <!-- Content section end-->
+    <!-- Content section end -->
     </div>
-<!-- Scripts ----------------->   
+<!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Scripts End -------------->   
+<!-- Scripts End -->   
 </body>
 </html>
