--- a/portfolio.html
+++ b/portfolio.html
@@ -9,14 +9,14 @@
     <title>Franciska Du Toit</title>
     <!-- Favicon to update -->
     <link rel="shortcut icon" type="image/jpg" href="#">
-    <!-- Bootstrap CDN ------>
+    <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <!-- Fontawesom Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Hover.css CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
-    <!-- CSS style sheet --->
+    <!-- CSS style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -48,7 +48,7 @@
             </div>
         </nav>
     </div>
-    <!-- Nav Menu end ------------>
+    <!-- Nav Menu end -->
     <div class="container">
     <!-- Hero Image for Desktop -->
     <section class="hero-image "  style="background-image: url(assets/images/franciska_du_toit_portfoliopage.jpg);">
@@ -75,15 +75,15 @@
                         <div class="col-12 col-md-6 portfolio-container">
                     <!-- Intro text-->
                             <div class="portfolio-text-container">
-                                <h1 class="portfolio-heading" >
+                                <h2 class="portfolio-heading" >
                                 Collection of Projects & Case Studies 
-                                </h1>
+                                </h2>
                                 <p class="portfolio-paragraph">
                                 I enjoy working on different types of projects. Click below to see some of the work in my portfolio.
                                 </p>
                             </div>
                     <!-- Intro text end-->
-                    <!--Blocks to projects------->
+                    <!--Blocks to projects -->
                             <div class="container">
                                 <div class="row">
                                     <div class="col nav-container">
@@ -104,7 +104,7 @@
                                     </div>
                                 </div>
                             </div>
-                    <!--Blocks to projects End--->
+                    <!--Blocks to projects End -->
                         </div>
                     </div>
                 </div>
@@ -120,14 +120,14 @@
             </ul>
         </section>
         <!-- Social Footer for mobile and tablet end -->
-        <!-- Personal info end-->
+        <!-- Personal info end -->
     </section>
-    <!-- Content section end-->
+    <!-- Content section end -->
     </div>
-<!-- Scripts ----------------->   
+<!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Scripts End -------------->   
+<!-- Scripts End -->   
 </body>
 </html>
