--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Franciska Du Toit Personal and Portfolio Website">
     <meta name="keywords" content="Franciska Du Toit, Franciska Du Toit website">
     <title>Franciska Du Toit</title>
     <!-- Favicon to update -->
-    <link rel="shortcut icon" type="image/jpg" href="#">
+    <link rel="shortcut icon" type="image/png" href="assets/images/franciska-du-toit-favicon.png">
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
