--- a/index.html
+++ b/index.html
@@ -57,20 +57,34 @@
 	</nav>
     </div>
     <!-- Nav Menu end -->
-    
-    <div class="container">
-    <!-- Hero Image for Desktop -->
-    <section class="hero-image "  style="background-image: url(assets/images/franciska-du-toit-homepage-image.jpg);">
-        <div class="hero-image-footer">
-            <ul class="social-list">
-                <li><a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
-                <li><a href="https://www.instagram.com/designed.byfranciska/" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://twitter.com/FranciskaDuToit" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
-            </ul>
-        </div>
-    </section>
-    <!-- Hero Image for Desktop End-->
+
+    <div class="container-fluid">
+		<div class="row" >
+            <!-- Banner section -->
+			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
+                <!-- Hero-image -->
+				<div class="row">
+					<img class="banner-image" src="./assets/images/franciska_du_toit_homepage2.jpg"/>
+                </div>
+                <!-- Hero-image end -->
+                <!-- Social Banner -->
+                <div class="row banner-imager-social" >
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-linkedin-in "></i> </a>
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-instagram "></i> </a> 
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-twitter "></i> </a> 
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-pinterest-p "></i> </a> 
+                    </div>
+                </div>
+                <!-- Social Banner end -->
+            </div>
+            <!-- Banner section End -->
     <!-- Content section-->
     <section class="personal-content">
         <section class="personal-section">
